    commands that were in libapache2-mod-shib2.
  * Move /usr/include/shibsp/paths.h to the architecture-specific include
    directory, since it varies by architecture.  Thanks, Andreas
    Beckmann.  (Closes: #720036)
  * Disable the forcing of --silent mode in Libtool since Debian build log
    analysis wants verbose logs.
  * Remove the now-unnecessary dh_builddeb override to use xz compression.
  * Update standards version to 3.9.5 (no changes required).

 -- Russ Allbery <rra@debian.org>  Sat, 17 Aug 2013 14:36:09 -0700

shibboleth-sp2 (2.5.2+dfsg-2) unstable; urgency=low

  * Upload to unstable.

 -- Russ Allbery <rra@debian.org>  Sun, 14 Jul 2013 11:27:40 -0700

shibboleth-sp2 (2.5.2+dfsg-1) experimental; urgency=low

  * New upstream release.
    - New shib-session and shib-user Require authentication types added,
      which should be used in preference to Require valid-user or Require
      user with Shibboleth authentication is desired.
    - New ShibCompatValidUser Apache directive, which works around the way
      that Shibboleth hooks into Require valid-user and Require user so
      that those directives will continue to work with non-Shibboleth
      authentication types.  This directive will be needed for servers
      that use Shibboleth and other authentication methods and want to use
      Require valid-user or Require user with non-Shibboleth methods.
    - Fix implementation of shib-metagen -l.
    - Fix AttributeExtractor handling of multiple logos.
    - Fix metadata attribute extraction with non-ASCII characters.
    - Fix problems with Apache subrequests during server-side include
      handling of unprotected pages.
    - Add character set to DiscoFeed page header.
    - Avoid leaking shibd sockets to child processes.
  * Add NEWS entry for the authentication directive changes.
  * Update README.Debian instructions to add AuthType None to the URLs
    that have to be available to everyone and to use Require shib-session